--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -118,7 +118,16 @@
                     </li>
                 </th:block>
                 <th:block
-                        th:if="${session.sessionToken != null and (session.sessionRole == 'PRODUCTION_MANAGER' or session.sessionRole == 'TRANSPORT_MANAGER' or session.sessionRole == 'CUSTOMER')}">
+                        th:if="${session.sessionToken != null and (session.sessionRole == 'CUSTOMER')}">
+                    <li class="sidebar-item">
+                        <a id="nav-forSale1" class="sidebar-link" href="/product/for-sale">
+                            <i class="fas fa-cubes"></i> <span class="align-middle">Продукти</span>
+                        </a>
+                    </li>
+                </th:block>
+
+                <th:block
+                        th:if="${session.sessionToken != null and (session.sessionRole == 'PRODUCTION_MANAGER' or session.sessionRole == 'TRANSPORT_MANAGER')}">
                     <li class="sidebar-item">
                         <a id="nav-availableProducts" class="sidebar-link" href="/product/available-products">
                             <i class="fas fa-cubes"></i> <span class="align-middle">Налични продукти</span>
